# healthSystem

./: LICENSE  README.md  camera.js  healthAssistance.py  hospital.php  index.css  index.html  process_registration.php  pyproject.toml  script.js  signup.css  signup.html  signup.py
includes/: head.php
